Fix error messages in settings on mobile.

--- a/assets/css/settings-base.css
+++ b/assets/css/settings-base.css
@@ -186,7 +186,8 @@ body.settings_page_hcaptcha {
 }
 
 #hcaptcha-message {
-	z-index: 1;
+	z-index: 999999;
+	box-sizing: border-box;
 }
 
 #hcaptcha-message p {
